# copy

./: .bazelrc  .bazelrc.cache  .gitignore  BUILD.bazel  Gopkg.toml  WORKSPACE  bazel  copy.go  ibazel  load.bzl
